// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App/> component should render correctly 1`] = `
<div
  className="app"
  data-theme="test-theme"
>
  <Header />
  <div
    className="appContent"
  >
    <Landing />
    <CookieDisclaimer />
    <Sections />
  </div>
  <Footer />
</div>
`;

exports[`<App/> component when the theme is dark should render correctly 1`] = `
<div
  className="app app__dark"
  data-theme="DARK_THEME"
>
  <Header />
  <div
    className="appContent appContent__dark"
  >
    <Landing />
    <CookieDisclaimer />
    <Sections />
  </div>
  <Footer />
</div>
`;
